force.com/CALM/src/objects/BG_Network_Carrier_Sessions__c.object
<CustomObject>
    <description>This Object describes the number of New Users for the past 60 days.</description>
    <fields>
        <fullName>au__c</fullName>
        <label>Application Key</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d10__c</fullName>
        <label>d10</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>d11__c</fullName>
        <label>d11</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>d12__c</fullName>
        <label>d12</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <label>Key (Column Name)</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BG Network Carrier Sessions</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BG Network Carrier Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>